# JPet

./: .clangd  .gitignore  .gitmodules  .ignore  CMakeLists.txt  JPet.aps  JPet.exe.manifest  JPet.rc  LICENSE  README.md  build.ps1  resource.h  vcpkg.json
.github/workflows/: release-build.yml
.helix/: config.toml  languages.toml
Resources/Joicombine/: Drag.motion3.json  Joicombine.cdi3.json  Joicombine.moc3  Joicombine.model3.json  Sad.motion3.json
Resources/Joicombine/expressions/: Drag.exp3.json  Sad.exp3.json
Resources/joi/: joi.cdi3.json  joi.moc3  joi.model3.json  joi.physics3.json  license.txt
Resources/joi/ClothChange/: NewClothes.motion3.json  OldClothes.motion3.json
Resources/joi/EyeChange/: EyeStar.motion3.json  EyeV.motion3.json
Resources/joi/FaceChange/: BlackOff.motion3.json  BlushOff.motion3.json  SweatOff.motion3.json
Resources/joi/Idle/: Idle.motion3.json  Idle2.motion3.json  Idle3.motion3.json
Resources/joi/MouthChange/: Mouth1.motion3.json  Mouth2.motion3.json  Mouth3.motion3.json  Mouth4.motion3.json  Mouth5.motion3.json  Mouth6.motion3.json
Resources/joi/PartChange/: GunOff.motion3.json  HatOn.motion3.json  KneeSocksOff.motion3.json  LeftEarOn.motion3.json  LegBeltOff.motion3.json  ShineOff.motion3.json  SleeveOn.motion3.json
Resources/joi/TouchMotion/: ArmMotion.motion3.json  EarMotion.motion3.json  EarMotion02.motion3.json  HeadMotion02.motion3.json
build-scripts/: build_and_run.ps1  jpet_setup.iss
doc/: attributes.md
resources/: model_config.json
resources/joi/: ZMCW.cdi3.json  ZMCW.moc3  ZMCW.model3.json  ZMCW.physics3.json  joi.model3.json  license.txt
resources/joi/EyeChange/: EyeDizzy.motion3.json  EyeNormal.motion3.json
resources/joi/FaceChange/: BlackOn.motion3.json  BlushOn.motion3.json  SweatOn.motion3.json
resources/joi/Idle/: Idle3.motion3.json
resources/joi/PartChange/: EditOff.motion3.json  EditOn.motion3.json  GunOn.motion3.json  HatOff.motion3.json  KneeSocksOn.motion3.json  LeftEarOff.motion3.json  LegBeltOn.motion3.json  RightEarOn.motion3.json  ShineOn.motion3.json  SleeveOff.motion3.json
resources/joi/SpecialMotion/: FollowIncrease.motion3.json
resources/joi/TouchMotion/: EarMotion03.motion3.json  HeadMotion.motion3.json
resources/joi/motions/: 1-1.exp3.json  1-2.exp3.json  1-3.exp3.json  1-4.exp3.json  2-1.exp3.json  click1.motion3.json  click2.motion3.json  click3.motion3.json  loading.motion3.json
resources/joi/switch/clothes/: sw_clothes_0.exp3.json  sw_clothes_1.exp3.json  sw_clothes_2.exp3.json
resources/panel/: index.html  package-lock.json  package.json  tailwind.config.js
resources/panel/src/: App.svelte  app.css  sse.js
resources/panel/src/components/: AttributeIcon.svelte  BuffIcon.svelte  Progress.svelte
resources/panel/src/pages/: Custom.svelte  Document.svelte  Profile.svelte  Rank.svelte  Setting.svelte  Task.svelte
src/: AudioManager.cpp  AudioManager.hpp  BuffManager.cpp  BuffManager.hpp  CMakeLists.txt  CookieWindow.cpp  CookieWindow.hpp  DataManager.cpp  DataManager.hpp  GameData.cpp  GameData.hpp  GamePanel.cpp  GamePanel.hpp  GameTask.cpp  GameTask.hpp  JPet.rc  LAppAllocator.cpp  LAppAllocator.hpp  LAppDefine.cpp  LAppDefine.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppModel.cpp  LAppModel.hpp  LAppPal.cpp  LAppPal.hpp  LAppSprite.cpp  LAppSprite.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  LAppView.cpp  LAppView.hpp  LUtils.hpp  MenuSprite.cpp  MenuSprite.hpp  ModelManager.cpp  ModelManager.hpp  PanelServer.cpp  (+21 more)
x64/Release/ALL_BUILD/: ALL_BUILD.recipe
x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate
